@@ -34,7 +34,20 @@ vars = {
   'chromium_svn': 'http://src.chromium.org/svn/trunk/src',
   'chromium_deps_svn': 'http://src.chromium.org/svn/trunk/deps/third_party',
 
-  'chromium_rev': '27573', 
+  # Dependencies' revisions to use:
+  'chromium_rev': '27692',
+  'google-url_rev': '119',
+  'gyp_rev': '671',
+  'icu_rev': '27687',
+  'openvcdiff_rev': '26',
+  'skia_rev': '341',
+  'v8_rev': '2966',
+
+  # Windows:
+  'cygwin_rev': '11984',
+  'ffmpeg_ia32_rev': '26428',
+  'pthreads-win32_rev': '26716',
+  'python_24_rev': '22967',
 }
 
 deps = {
@@ -44,7 +57,7 @@ deps = {
   'webkit/build':
       Var('chromium_svn')+'/webkit/build@'+Var('chromium_rev'),
   'tools/gyp':
-    'http://gyp.googlecode.com/svn/trunk@671',
+    'http://gyp.googlecode.com/svn/trunk@'+Var('gyp_rev'),
 
   # Basic tools
   'base':
@@ -54,7 +67,7 @@ deps = {
   'skia':
     Var('chromium_svn')+'/skia@'+Var('chromium_rev'),
   'third_party/skia':
-    'http://skia.googlecode.com/svn/trunk@341',
+    'http://skia.googlecode.com/svn/trunk@'+Var('skia_rev'),
 
   # testing
   'testing':
@@ -62,9 +75,7 @@ deps = {
 
   # v8 javascript engine
   'v8':
-    'http://v8.googlecode.com/svn/trunk@2966',
-  'webkit/extensions/v8':
-    Var('chromium_svn')+'/webkit/extensions/v8@'+Var('chromium_rev'),
+    'http://v8.googlecode.com/svn/trunk@'+Var('v8_rev'),
   
   # net dependencies
   'net':
@@ -72,13 +83,13 @@ deps = {
   'sdch':
     Var('chromium_svn')+'/sdch@'+Var('chromium_rev'),
   'sdch/open-vcdiff':
-    'http://open-vcdiff.googlecode.com/svn/trunk@26',
+    'http://open-vcdiff.googlecode.com/svn/trunk@'+Var('openvcdiff_rev'),
   'googleurl':
-    'http://google-url.googlecode.com/svn/trunk@119',
+    'http://google-url.googlecode.com/svn/trunk@'+Var('google-url_rev'),
 
   # other third party
   'third_party/icu':
-    Var('chromium_deps_svn')+'/icu42@26673',
+    Var('chromium_deps_svn')+'/icu42@'+Var('icu_rev'),
 
   'third_party/bzip2':
     Var('chromium_svn')+'/third_party/bzip2@'+Var('chromium_rev'),
@@ -109,7 +120,22 @@ deps = {
 
   'third_party/zlib':
     Var('chromium_svn')+'/third_party/zlib@'+Var('chromium_rev'),
+}
 
+deps_os = {
+  'win': {
+    'third_party/cygwin':
+      Var('chromium_deps_svn')+'/cygwin@'+Var('cygwin_rev'),
+
+    'third_party/python_24':
+      Var('chromium_deps_svn')+'/python_24'+Var('python_24_rev'),
+
+    'third_party/ffmpeg/binaries/chromium/win/ia32':
+      Var('chromium_deps_svn')+'/ffmpeg/binaries/win@'+Var('ffmpeg_ia32_rev'),
+
+    'third_party/pthreads-win32':
+      Var('chromium_deps_svn')+'/pthreads-win32@'+Var('pthreads-win32_rev'),
+  },
 }
 
 skip_child_includes = [
@@ -152,6 +178,7 @@ hooks = [
                'build/gyp_chromium',
                '-Dinside_chromium_build=0',
                '-Dv8_use_snapshot=false',
+               '-Dmsvs_use_common_release=0',
                '--depth=./',
                'webkit.gyp'],
   },
